crates/test-files/fixtures/compile_errors/duplicate_arg_in_contract_method.fe
contract Foo {
    pub fn bar(foo: u8, foo: u8) {}
}
